--- a/src/css/forcast.css
+++ b/src/css/forcast.css
@@ -3,7 +3,7 @@
   margin-top: 5vh;
 }
 .container {
-  box-shadow: 0.2vw 0.2vw 0.2vw 0.2vw slategrey;
+  box-shadow: 0.1vw 0.1vw 0.1vw 0.1vw whitesmoke;
   border-radius: 1vw;
   padding: 0.5vw;
   margin-right: 1vw;
