--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(#e66465, #9198e5);
+  background: #123;
   color: whitesmoke;
   font-family: "Piazzolla", serif;
 }
@@ -31,7 +31,7 @@ body {
   display: block;
 }
 .container {
-  background: linear-gradient(#e66465, #9198e5);
+  background: #123;
   color: whitesmoke;
   font-family: "Piazzolla", serif;
 }
